# logger-package

./: .flake8  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml  setup.py  setup.py 
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: pr.yaml  pr.yml  release.yaml  release.yml
logger/: __init__.py  logger.py
src/: logger.py
tests/: test_log_messages.py
