[tool.poetry]
name = "logger"
version = "1.0.4"
description = "This is an additional implementation over the logging module. This module is designed for fast initialization and configuration of readable and structured logging."
authors = ["Bervinov Oleg <obervinov@pm.me>"]
maintainers = ["Bervinov Oleg <obervinov@pm.me>"]
license = "MIT"
readme = "README.md"
packages = [{include = "logger"}]
homepage = "https://github.com/obervinov/logger-package"
repository = "https://github.com/obervinov/logger-package"
documentation = "https://github.com/obervinov/logger-package/blob/main/README.md"
keywords = ["logger", "logging", "logs", "log"]
include = ["CHANGELOG.md"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/obervinov/logger-package/issues"

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
